comment out dome-skyflat ratio image

--- a/skysub.tex
+++ b/skysub.tex
@@ -377,14 +377,14 @@ Simply using sky flats eliminates these artifacts.
 % skysubpub/flattened_image_comparison.py
 \end{figure}
 
-\begin{figure}[t]
-\centering
-\includegraphics[width=3.5in]{figs/flatratio_09BQ01_Ks}
-\caption{Difference image between the 09BQ01 $K_s$ (queue run) sky flat and the \texttt{domeflat\_8302B\_20090728HST143302\_Ks} dome flat used in the \iiwione\ pipeline, in percent.
-Using the median night sky illumination over a WIRCam queue run, rather than a dome lamp, results not only in $>2$\% edge-to-edge difference in the large scale WIRCam illumination function, but also in different characterizations of gain structure in the WIRCam detector amplifiers (the 32 horizontal bands in each of the four WIRCam detectors).}
-\label{fig:domeflatratio}
-% made with wircam/skyflat/plot/flatratio.py
-\end{figure}
+% \begin{figure}[t]
+% \centering
+% \includegraphics[width=3.5in]{figs/flatratio_09BQ01_Ks}
+% \caption{Difference image between the 09BQ01 $K_s$ (queue run) sky flat and the \texttt{domeflat\_8302B\_20090728HST143302\_Ks} dome flat used in the \iiwione\ pipeline, in percent.
+% Using the median night sky illumination over a WIRCam queue run, rather than a dome lamp, results not only in $>2$\% edge-to-edge difference in the large scale WIRCam illumination function, but also in different characterizations of gain structure in the WIRCam detector amplifiers (the 32 horizontal bands in each of the four WIRCam detectors).}
+% \label{fig:domeflatratio}
+% % made with wircam/skyflat/plot/flatratio.py
+% \end{figure}
 
 \section{Sky Flat Fielding and Median Sky Subtraction}
 \label{sec:flats}
