--- a/skysub.tex
+++ b/skysub.tex
@@ -383,17 +383,16 @@ Simply using sky flats eliminates these artifacts.
 \section{Sky Flat Fielding and Median Sky Subtraction}
 \label{sec:flats}
 
-As we mentioned previously in \Sec{reduction_outline}, dome flats fail to properly calibrate dust, amplifier gain and surface defects in WIRCam data (see \Fig{flattenedimage_comparison}).
-Sky flats are an appropriate alternative, both because of the abundant background (any NIR imaging program can use its own images to build sky flats), and because sky flats directly match the illumination path and colour of observations.
+As we mentioned previously in \Sec{reduction}, dome flats fail to properly calibrate dust, amplifier gain and surface defects in WIRCam data (see \Fig{flattenedimage_comparison}).
+Sky flats are an appropriate alternative, both because of the abundant background photons (any NIR imaging program can use its own images to build sky flats), and because sky flats directly match the illumination path and colour of observations.
 Sky flats also have the advantage of being contemporaneous with observations: if the WIRCam flat field is variable, then sky flats can be built to track such variability.
 This is a distinct advantage over dome flats, which CFHT builds at the beginning of every WIRCam queue run, or even twilight flats that can only be built once per night.
 
 Despite these advantages, sky flats are built on the assumption that all background illumination in a night sky image is proportional to the flat field function.
-Several contaminants prevent this from being true: thermal emission from the detector or telescope structures, 
-Thermal emission from the detector and telescope structures can add a significant background in the $K_s$ band, and scattered light (\eg off the camera's cold pupil stop further perturb the proportionality of flat field images.
+Several contaminants prevent this from being true: thermal emission from the detector or telescope structures, can add a significant background in the $K_s$ band, and scattered light (\eg off the camera's cold pupil stop) and further perturb the proportionality of flat field images.
 Ideally one would subtract these contaminants from images before constructing sky flats.
 Then science images could be flat fielded, and additive contaminants in science images would be automatically removed in subsequence median background subtraction.
-Note that both dome flats and twilight flat fields \emph{are} able to distinguish additive contaminants from the multiplicative flat field function.
+Note that both dome flats and twilight flat fields can distinguish additive contaminants from the multiplicative flat field function.
 Dome flats are built from the differences of images taken with the lamp on and off, directly removing any thermal component from the flat field.
 % TODO describe what dome flats can do. Are they immune to the cold stop? No, dome does not. Twilight might.
 Twilight flats can also treat additive contamination by capturing images at different levels of sky illumination so that linear fits to each pixel allow any additive bias to be removed.
@@ -405,16 +404,16 @@ A second assumption built into sky flat construction is that sky glow is uniform
 Wide-field images of the near-infrared night sky show that sky glow has rich spatial and temporal variations.
 However, by marginalizing over a large number of sky images, any illumination bias in the sky can be mitigated.
 The 2009B observing program even took this marginalization process further by sampling pseudo-random sites on the sky while building sky flats. One degree of control that can be exerted over sky flat construction is the time window that sky images are drawn from.
-Using a wide window, the length of a queue observing run, asserts confidence that the intrinsic WIRCam flat field function is stable over several days, while producing the statistically flattest average sky illumination pattern.
+Using a wide window, the length of a queue observing run, asserts confidence that the intrinsic WIRCam flat field function is stable over several days, while producing the statistically flattest residual sky illumination pattern.
 Shorter windows make the opposite assertion that the WIRCam flat field is stable, and that any bias in sky shapes can be tolerated.
 
 We investigate three sky flat designs in this study, labelled \texttt{QRUN}, \texttt{NIGHT} and \texttt{FW100K}.
 \texttt{QRUN} flats are built from all sky integrations taken during a queue run, and through a given filter.
 For the \androids\ program, 25--637 (typically $\sim 140$) sky images, obtained over a sequence of a $\leq 10$ days, are composed into a \texttt{QRUN} flat.
 \texttt{NIGHT} flats are from all sky integration taken during a single night, through a given filter.
-Because observations are observed in queue service observing mode, the ensemble of sky images would typically sample 0.5--3 hours of a night.
+Because observations are observed in queue service observing mode, the ensemble of sky images typically sample 0.5--3 hours of a night.
 Last, we introduce \emph{real-time} sky flats that are rapidly updated throughout the night in case the WIRCam illumination function and gain structure is unstable.
-\texttt{FW100K}, is designed such that the pool of sky images reaches cumulative background levels of at least 100,000 ADU, or that the time span from first to last sky integration be no longer than two hours.
+\texttt{FW100K}, is designed such that the pool of sky images reaches cumulative background levels of at least 100,000 ADU, or that the time span from first to last sky integration is no longer than two hours.
 Given the 07B $J$-band ST nodding pattern, 15 sky integrations are accumulated in 50 minute windows, whereas the more frequent nodding in the 09B campaign shortened this window to 20 minutes (though as long as 50--90 minutes in dark sky conditions).
 The brighter $K_s$ sky calls for just 7--13 integrations in 07B, or 10--20 integrations in the 09B campaign.
 This number of $K_s$ sky samples was accumulated within 10--30 minutes in 07B, or 10--70 minutes in 09B.
@@ -422,7 +421,7 @@ This number of $K_s$ sky samples was accumulated within 10--30 minutes in 07B, o
 \subsection{Implementation of Sky Flat Fielding and Median Background Subtraction}
 \label{sec:flatbuilding}
 
-Here we describe the technical details of sky flat fielding and median background subtraction steps.
+We now describe the technical details of sky flat fielding and median background subtraction steps.
 Recall from \Fig{flowchart} that the inputs of flat field construction are `de-flattened' images that retain the linearity and dark-current subtraction of the \iiwione\ pipeline.
 
 \subsubsection{Sky Flat Construction}
@@ -437,7 +436,7 @@ To avoid bias in the background estimate, we mask any pixels that do not sample 
 
 From the ensemble of images produced by an individual WIRCam detector, we compute the median background level: $\beta_j = \mathrm{median}(\alpha_{1,j}, \alpha_{2,j}\ldots \alpha_{n,j} )$.
 Further, we also compute $S$, the median of all median detector levels: $S=\mathrm{median}(\beta_j)$.
-Then each the sky image is scaled by the factor $f_{ij} = \beta_j / (\alpha_{ij} S)$.
+Then each sky image is scaled by the factor $f_{ij} = \beta_j / (\alpha_{ij} S)$.
 Note that the factor $\alpha_{ij}^{-1}$ normalizes each image to the same level for stacking, while the ratio $\beta_j / S$ adjusts the level of each detector according to detector-to-detector zero-point offsets.
 % Indeed, detector-to-detector zero-point offsets can be measured as $-2.5 \log_{10}(\beta_i / \beta_1)$, as shown in \Fig{fw100k_zpdiff}.
 % WIRCam detector \#1 (North-West quadrant) is clearly the most sensitive, while the dispersion indicates the level of gain variability in WIRCam.
@@ -460,8 +459,8 @@ Independent median background images for each WIRCam detector are produced by ch
 Across each image, the median background intensity is recorded.
 A Source Extractor object mask, as used in \Sec{flatbuilding} for flat fielding, removes bias from astrophysical sources.
 Each sky image is \emph{additively} scaled to a common intensity level, allowing differences in overall background amplitude to be ignored by the median combination.
-As described in \Sec{flatbuilding}, \sw{Swarp} is used to median-combine the sky images, taking into account non-sky pixel masks.
-Since these median background images record only low-frequency spatial information, these median background images are smoothed with a Gaussian kernel (note this is quite different from the function of median background images applied to dome-flat processed WIRCam data, where median background subtraction also removed pixel-to-pixel artifacts).
+As described in \Sec{flatbuilding}, \sw{Swarp} is used to median-combine the sky images with non-sky pixel masks.
+Since the background has only low-frequency spatial information, these median background images are smoothed with a Gaussian kernel (note this is quite different from the function of median background images applied to dome-flat processed WIRCam data, where median background subtraction also removed pixel-to-pixel artifacts).
 This median background image is then additively scaled back to the original level of the primary sky image.
 
 Each science image is background subtracted by first identifying the median background frame whose primary image was taken most closely in time.
@@ -474,31 +473,30 @@ Our flat field procedure necessitates a revision of photometric zero-points.
 Since our program is observed in short ($\sim 1$ hour) blocks in CFHT's queue service observing, we do not have the necessary airmass baseline to solve for nightly zero-point and atmospheric extinction terms for each band.
 Instead, we estimate photometric zero-points by directly bootstrapping against sources from the Two Micron All Sky Survey (2MASS) Point Source Catalog (PSC) \citep{Skrutskie:2006}.
 Although these are not standards, the ensemble of 2MASS stars may be treated as such.
-Since the disk of M31 is crowded, and 2MASS has poor resolution ($1\arcsec$~per pixel), we choose to directly estimate zero-points only in the sky images.
-Then moving window average of sky image zero-point are applied to paired disk images (analogous to the median background subtraction procedure, described in Section \ref{sec:mediansky}).
+Since the disk of M31 is crowded, and 2MASS has low resolution ($1\arcsec$~pix$^{-1}$), we choose to directly estimate zero-points only in the sky images.
+We estimate the zeropoints of disk images from a sliding window average of zeropoints from adjacent sky images (analogous to the median background subtraction procedure, described in \Sec{mediansky}).
 
 Specifically, instrumental photometry of stars in the uncrowded sky fields is obtained with Source Extractor \citep{Bertin:1996}.
 We use the \texttt{AUTO} photometry mode to capture the full stellar light without using aperture corrections.
-Objects in the 2MASS PSC are matched to Source Extractor detections by position using J. Sick's \sw{Mo'Astro}\footnote{\url{http://moastro.jonathansick.ca}} Python package, that manages the full 2MASS PSC in a MongoDB database.
+2MASS PSC objects are matched to our Source Extractor detections by position using J. Sick's \sw{Mo'Astro}\footnote{\url{http://moastro.jonathansick.ca}} Python package, that manages the full 2MASS PSC in a MongoDB database.
 The 2MASS PSC contains many galaxies, and many 2MASS sources are saturated in our deeper WIRCam images.
-Thus we select stars with $m_J < 14$ or $m_{K_s} < 15$ magnitudes, and stars with FWHM $<1$\arcsec.
+Thus we select sources with $J < 14$ or $K_s < 15$ magnitudes, and FWHM $<1$\arcsec according to our Source Extractor photometry.
 Additionally, we select sources with $J-K_s < 0.8$ (typical of foreground Milky Way stars) as we observe larger zero-point residuals in redder stars.
 After filtering, typically 200 matched 2MASS sources remain in typical WIRCam images.
-
-Given sample of matching 2MASS and instrumental photometry (in ADU) in a specific sky image, an instrumental zero-point is estimated as median:
+Given a joined catalog of 2MASS and instrumental photometry (in ADU) in a specific sky image, we estimate an instrumental zero-point as the median photometric offset:
 
 \begin{equation}
   \label{eq:photcal}
   m_0 = \langle m_\mathrm{2MASS} + 2.5 \log_{10}(\mathrm{ADU}/T_\mathrm{exp}) \rangle.
 \end{equation}
 
-We do not find a trend in zero-point vs $J-K_s$ colour index in our own data.
-Hence, following practice at CFHT, we assume that there is no colour transformation between 2MASS and WIRCam bandpasses.
+Our data show no trend in zero-point vs $J-K_s$ color index.
+Hence, following practice at CFHT, we do not apply a color transformation between 2MASS and WIRCam bandpasses.
 Internal testing at CFHT with synthetic photometry indicates that colour transformation coefficients may be $A_J = 0.05$ and $A_{K_s}=-0.005$ (K. Thanjuvar, priv.\ comm.)
 For typical M31 RGB stars with $J-K_s\sim 1$, this colour transformation would be a $< 0.1$~mag effect.
 
 Given that 2MASS stars in each image have photometric uncertainties $0.05 \lesssim \sigma_{\mathrm{2MASS~mag}} \lesssim 0.3$, the typical statistical zero-point uncertainty, $\sigma_{m_0}$, is 0.1~mag in a single image.
-Again, since $m_0$ is fit for sky images, zero-points for science images are interpolated as the median of a sliding window of sky images large enough for the statistical uncertainty of the median $m_0$ to be reduced below 0.01 mag.
+However, the random uncertainty of zero-points adopted from sliding window averages across multiple sky images are $<0.01$~mag.
 % see $andpipe/wircam/calibset/photcal/singleimg/uncertainty_dists.py for photometry properties 
 
 \section{Analysis of Sky Flat Fielding and Background Subtraction Methods}
